# cpp-hw-fall-2018

./: .gitignore  CMakeLists.txt  README.md
Differentiator/: main.cpp
Differentiator/src/: DiffFunc.h  DiffNode.h  Differentiator.h
PoemSort/: CMakeLists.txt  README.md  RomeoAndJuliet.txt  main.cpp
PoemSort/html/: annotated.html  class_array-members.html  class_array.html  classes.html  files.html  globals.html  (+12 more)
Processor/: Processor  main.cpp
ProtectedStack/: stack_error.txt
QuadraticSolver/: CMakeLists.txt  README.md
QuadraticSolver/html/: _polynomial-example.html  _polynomial_8cpp.html  _polynomial_8h.html  _polynomial_8h_source.html  _test_8cpp.html  annotated.html  class_polynomial-members.html  class_polynomial.html  class_polynomial_test-members.html  class_polynomial_test.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  hierarchy.html  index.html  menudata.js  struct_roots-members.html  struct_roots.html
QuadraticSolver/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  enums_0.js  files_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_2.js
QuadraticSolver/latex/: _polynomial-example.tex  _polynomial_8cpp.tex  _polynomial_8h.tex  _test_8cpp.tex  annotated.tex  class_polynomial.tex  class_polynomial_test.eps  class_polynomial_test.tex  examples.tex  files.tex  hierarchy.tex  refman.tex  struct_roots.tex
QuadraticSolver/lib/google-test/: README.md
QuadraticSolver/lib/google-test/googlemock/: README.md
QuadraticSolver/lib/google-test/googletest/: README.md
QuadraticSolver/src/: Polynomial.cpp  Polynomial.h
QuadraticSolver/test/: Test.cpp
(+44 files in other folders)
